2006-02-11  Roger Sayle  <roger@eyesopen.com> 	    R. Scott Bailey  <scott.bailey@eds.com> 	    Bill Northcott  <w.northcott@unsw.edu.au>

PR bootstrap/16787
	* floatformat.c: Include <float.h> where available.
	(NAN): Use value of DBL_QNAN if defined, and NAN isn't.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@110873 138bc75d-0d04-0410-961f-82ee72b054a4